# intro2rob

urdf_assignment/: CMakeLists.txt  package.xml
urdf_assignment/launch/: display.launch
urdf_assignment/urdf/: myRobot.urdf
